// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RewardCard /> by default matches with snapshot 1`] = `
<div
  className="sc-bZQynM htIJZx k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <h6
        className="sc-htpNat kVNXBx k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with DiamondBadge matches with snapshot 1`] = `
<div
  className="sc-bZQynM htIJZx k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <div
        className="k-RewardCard__diamondBadge"
      >
        <span
          className="sc-EHOje dFYoQB"
          disabled={false}
        >
          <span
            className="k-IconBadge__content"
          >
            <svg
              aria-hidden={true}
              className="k-RewardCard__diamondBadge__diamondIcon k-IconBadge__svg"
              height="28"
              viewBox="0 0 19 28"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 14l-4 10-4-10h8zm5 0l-7 10 4-10h3zM4 14l4 10-7-10h3zm8-6l2 4H6l2-4h4zm3 0l4 4h-3l-2-4h1zM6 8l-2 4H1l4-4h1zm12.1070508-5.64951905l.75 1.2990381-3.4641016 2.00000005-.75-1.2990382 3.4641016-1.99999995zm-16.7141016 0L4.8570508 4.3504809l-.75 1.2990382L.6429492 3.64951905l.75-1.2990381zM10.5 0v4H9V0h1.5z"
                fill="#fff"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
        <div
          className="k-RewardCard__diamondBadge__content"
        >
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="sc-htpNat kVNXBx k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with all props matches with snapshot 1`] = `
<div
  className="sc-bZQynM htIJZx k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <div
        className="k-RewardCard__starredBadge"
      >
        <span
          className="sc-EHOje dFYoQB"
          disabled={false}
        >
          <span
            className="k-IconBadge__content"
          >
            <svg
              aria-hidden={true}
              className="k-RewardCard__starredBadge__starredIcon k-IconBadge__svg"
              fill="#222"
              height="16"
              viewBox="0 0 18 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
              />
            </svg>
          </span>
        </span>
        <div
          className="k-RewardCard__starredBadge__content"
        >
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="sc-htpNat kVNXBx k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
      >
        100$
      </h6>
      <p
        className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-weight-bold"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </p>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Superatis Tauri montis verticibus qui ad solis ortum sublimius attolluntur, Cilicia spatiis porrigitur late distentis dives bonis omnibus terra, eiusque lateri dextro adnexa Isauria, pari sorte uberi palmite viget et frugibus minutis, quam mediam navigabile flumen Calycadnus interscindit.
      </p>
      <ul
        className="sc-dnqmqq bYuYzA k-List"
      >
        <li>
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos k-RewardCard__infos--hasBottomMargin"
          >
            Contributors: 
            <span
              className="sc-ifAKCX cFlEyZ k-u-weight-light"
            >
              35
            </span>
          </span>
        </li>
        <li>
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos k-RewardCard__infos--hasBottomMargin"
          >
            Availability: 
            <span
              className="sc-ifAKCX cFlEyZ k-u-weight-light"
            >
              42/1000
            </span>
          </span>
        </li>
        <li>
          <span
            className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos"
          >
            Delivery: 
            <span
              className="sc-ifAKCX cFlEyZ k-u-weight-light"
            >
              January 2019
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="k-RewardCard__rowSide k-RewardCard__rowSide--hasMargins"
    >
      <div
        className="k-RewardCard__figureWrapper"
      >
        <img
          alt="My reward"
          className="k-RewardCard__image"
          src="http://via.placeholder.com/200x240/caf4fe/caf4fe"
        />
      </div>
    </div>
  </div>
  <div
    className="k-RewardCard__checkedIconLine"
  >
    <span
      className="sc-EHOje cOnFfw k-RewardCard__iconBadge"
      disabled={false}
    >
      <span
        className="k-IconBadge__content"
      >
        <svg
          className="k-IconBadge__svg"
          fill="#fff"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="k-RewardCard__checkedSection"
  >
    <p
      className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-tiny"
    >
      You contributed to this project.
    </p>
    <a
      className="sc-ifAKCX cFlEyZ k-u-color-primary1 k-u-decoration-none k-u-size-tiny k-u-weight-regular"
      href="#"
    >
      Manage my contribution
    </a>
  </div>
</div>
`;

exports[`<RewardCard /> with legacy props matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bCeqqR k-LegacyRewardCard"
  disabled={false}
>
  <div
    className="sc-bdVaJa fdLNbY"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
      >
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa zBUGX"
          >
            <h1
              className="sc-htpNat KvJvV k-u-color-font1"
            >
              Custom title amount
            </h1>
          </div>
          <div
            className="sc-bdVaJa iDiPml"
          >
            <div
              className="sc-bxivhb gmqSjE k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          <div
            className="sc-bdVaJa gSHEXD"
          >
            <p
              className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-huge k-u-weight-bold k-u-margin-none"
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-bdVaJa ggQxmM"
          >
            <p
              className="k-Paragraph k-u-color-font1 k-Paragraph--tertiary k-Paragraph--withoutMargin"
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa iDiPml"
          >
            <span
              className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title contributors 
              <span
                className="sc-ifAKCX cFlEyZ k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title delivery 
              <span
                className="sc-ifAKCX cFlEyZ k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title availability 
              <span
                className="sc-ifAKCX cFlEyZ k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          className="sc-bdVaJa jtnNso"
        >
          <button
            aria-labelledby="Custom text button"
            className="k-Button k-Button--helium k-Button--big k-LegacyRewardCard__button"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            className="sc-bdVaJa jtfdLD"
          >
            <div
              className="k-LegacyRewardCard__myContribution"
            >
              <span
                className="sc-EHOje cOnFfw k-LegacyRewardCard__iconBadge"
                disabled={false}
              >
                <span
                  className="k-IconBadge__content"
                >
                  <svg
                    className="k-IconBadge__svg"
                    fill="#fff"
                    height="8"
                    viewBox="0 0 11 8"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                    />
                  </svg>
                </span>
              </span>
              <div
                className="k-LegacyRewardCard__myContribution__text"
              >
                <span
                  className="sc-ifAKCX cFlEyZ k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="sc-ifAKCX cFlEyZ k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s LegacyRewardCard__col_image"
      >
        <div
          className="sc-bdVaJa bDWFJH"
        >
          <div
            className={null}
          >
            <img
              alt="Image alt"
              className="k-LegacyRewardCard__image"
              src="#image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with video matches with snapshot 1`] = `
<div
  className="sc-bZQynM htIJZx k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <h6
        className="sc-htpNat kVNXBx k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
    <div
      className="k-RewardCard__rowSide k-RewardCard__rowSide--hasMargins"
    >
      <div
        className="k-RewardCard__figureWrapper"
      >
        <video
          autoPlay={true}
          className="sc-gzVnrw gSBsWz k-RewardCard__video"
          loop={false}
          muted={true}
          playsInline={true}
          poster={null}
        >
          <source
            src="#video.mp4"
            type="video/mp4"
          />
          <source
            src="#video.webm"
            type="video/webm"
          />
        </video>
      </div>
    </div>
  </div>
</div>
`;
